@@ -101,16 +101,17 @@ t/MARC-Convert-Wikidata-Utils/02-version.t
 t/MARC-Convert-Wikidata-Utils/03-clean_cover.t
 t/MARC-Convert-Wikidata-Utils/04-clean_date.t
 t/MARC-Convert-Wikidata-Utils/05-clean_edition_number.t
-t/MARC-Convert-Wikidata-Utils/06-clean_issn.t
-t/MARC-Convert-Wikidata-Utils/07-clean_number_of_pages.t
-t/MARC-Convert-Wikidata-Utils/08-clean_oclc.t
-t/MARC-Convert-Wikidata-Utils/09-clean_publication_date.t
-t/MARC-Convert-Wikidata-Utils/10-clean_publisher_name.t
-t/MARC-Convert-Wikidata-Utils/11-clean_publisher_place.t
-t/MARC-Convert-Wikidata-Utils/12-clean_series_name.t
-t/MARC-Convert-Wikidata-Utils/13-clean_series_ordinal.t
-t/MARC-Convert-Wikidata-Utils/14-clean_subtitle.t
-t/MARC-Convert-Wikidata-Utils/15-clean_title.t
+t/MARC-Convert-Wikidata-Utils/06-clean_isbn.t
+t/MARC-Convert-Wikidata-Utils/07-clean_issn.t
+t/MARC-Convert-Wikidata-Utils/08-clean_number_of_pages.t
+t/MARC-Convert-Wikidata-Utils/09-clean_oclc.t
+t/MARC-Convert-Wikidata-Utils/10-clean_publication_date.t
+t/MARC-Convert-Wikidata-Utils/11-clean_publisher_name.t
+t/MARC-Convert-Wikidata-Utils/12-clean_publisher_place.t
+t/MARC-Convert-Wikidata-Utils/13-clean_series_name.t
+t/MARC-Convert-Wikidata-Utils/14-clean_series_ordinal.t
+t/MARC-Convert-Wikidata-Utils/15-clean_subtitle.t
+t/MARC-Convert-Wikidata-Utils/16-clean_title.t
 t/MARC-Convert-Wikidata/01-use.t
 t/MARC-Convert-Wikidata/02-version.t
 t/MARC-Convert-Wikidata/03-new.t
