@@ -1,4 +1,5 @@
 0.31
+ - Add clean_isbn() function.
 
 0.30 2025-08-03T13:09:26+02:00
  - Update to new version of Wikibase::Datatype@0.39.
